--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,6 @@
 python_version = 3.8
 warn_return_any = True
 warn_unused_configs = True
-files = src/**/*.py,test/*.py
-mypy_path = src,.venv/lib/python3.8/site-packages
+files = src/command/*.py,test/*.py
+mypy_path = src,test
 
