--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,6 @@
 python_version = 3.8
 warn_return_any = True
 warn_unused_configs = True
-files = src/command/*.py,test/*.py
-mypy_path = src,test
+files = fs_snapshot/command/*.py,test/*.py
+mypy_path = test
 
