add application-level logging, configure db logging at the app level
  - model.config: add log_file parameter

  - adapter.db: pass in pre-built logger instead of building logger there

  - Note: the way it works is, there is a top-level logger named fs-snapshot.
    It gets configured manually in adapter.logging.init_logger, based on
    config.log_file, at the top of the program as soon as you have a config.

  - Note: Any modules can then define module-level loggers with
    adapter.logging.get_logger(__name__), instead of python-global
    logging.getLogger(__name__). I don't think it matters that they will be
    loaded before the init_logger is run; the init_logger will simply change
    the logger's handlers out from under it. The beauty and terror of global
    variables.

  - Note: the store DB logger is similarly configured in init_db_logger, and
    fetched with get_db_logger. You have to have the config.store_db_log_name
    to fetch it.

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,6 @@
 python_version = 3.8
 warn_return_any = True
 warn_unused_configs = True
-files = fs_snapshot/command/*.py,test/*.py
+files = fs_snapshot/__main__.py,test/*.py
 mypy_path = test
 
