fix config_file parsing
store command: improve log messages identifying the config

fix setup.py to install test deps with pip

fix mypy.ini to specify virtualenv python to find deps

    Note: I guess this is how you do it. Thank you python gods for mypy, but
    JFC why is the imports discovery so damn obscure?

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 python_version = 3.8
+python_executable = .venv-test/bin/python
 warn_return_any = True
 warn_unused_configs = True
 files = fs_snapshot/__main__.py,test/*.py
